--- a/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="rightsplitpane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiEintragController">
+<AnchorPane fx:id="rightsplitpane" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiEintragController">
 	<children>
 		<VBox fx:id="eintragVBox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<children>
@@ -19,7 +19,7 @@
 						<Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
 					</VBox.margin>
 				</ToolBar>
-				<TitledPane fx:id="paneAnbindung" animated="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="EDI-Anbindung">
+				<TitledPane fx:id="paneAnbindung" animated="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Integrationsszenario">
 					<content>
 						<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
 							<children>
@@ -43,7 +43,7 @@
 										<Label alignment="CENTER_RIGHT" layoutX="9.600000381469727" layoutY="68.60000038146973" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Konfiguration:" GridPane.rowIndex="3">
 										</Label>
 										<ComboBox disable="true" layoutX="9.600000381469727" layoutY="85.60000038146973" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-										<Label alignment="CENTER_RIGHT" layoutX="9.600000381469727" layoutY="34.60000038146973" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Szenario:" AnchorPane.leftAnchor="14.0" GridPane.rowIndex="1">
+										<Label alignment="CENTER_RIGHT" layoutX="9.600000381469727" layoutY="34.60000038146973" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Bezeichnung:" AnchorPane.leftAnchor="14.0" GridPane.rowIndex="1">
 										</Label>
 										<TableView editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="120.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
 											<columns>
@@ -52,7 +52,7 @@
 												<TableColumn editable="false" maxWidth="353.0000305175781" minWidth="61.0" prefWidth="126.0" resizable="false" text="Datum" />
 												<TableColumn editable="false" maxWidth="269.0" minWidth="0.0" prefWidth="128.0" resizable="false" text="Quelle" />
 											</columns>
-										</TableView><Button fx:id="btnNewSzenario" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Neues Szanrio anlegen..." GridPane.columnIndex="2" GridPane.rowIndex="1" /><Button fx:id="btnNewConfiguration" disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Neue Konfiguration anlegen..." GridPane.columnIndex="2" GridPane.rowIndex="3" />
+										</TableView><Button fx:id="btnNewSzenario" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Neues Szenrio anlegen..." GridPane.columnIndex="2" GridPane.rowIndex="1" /><Button fx:id="btnNewConfiguration" disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Neue Konfiguration anlegen..." GridPane.columnIndex="2" GridPane.rowIndex="3" />
 									</children>
 <padding>
 <Insets right="8.0" />
