--- a/EdiListFX/src/de/vbl/ediliste/view/NeuerEdiEintrag.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/NeuerEdiEintrag.fxml
@@ -17,17 +17,17 @@
 	<center>
 		<GridPane BorderPane.alignment="CENTER">
 		  <columnConstraints>
-		    <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" />
+		    <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="30.0" />
 		    <ColumnConstraints hgrow="SOMETIMES" maxWidth="547.0" minWidth="10.0" prefWidth="137.0" />
 		<ColumnConstraints hgrow="SOMETIMES" maxWidth="547.0" minWidth="10.0" />
-		<ColumnConstraints hgrow="SOMETIMES" maxWidth="547.0" minWidth="10.0" prefWidth="72.0" />
+		<ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="547.0" minWidth="10.0" prefWidth="30.0" />
 		  </columnConstraints>
 		  <rowConstraints>
 		    <RowConstraints maxHeight="61.0" minHeight="10.0" prefHeight="61.0" vgrow="SOMETIMES" />
 		    <RowConstraints maxHeight="99.0" minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
 		    <RowConstraints maxHeight="189.0" minHeight="10.0" prefHeight="74.0" vgrow="SOMETIMES" />
 		  </rowConstraints>
-		<children><TextField fx:id="tfEdiNr" focusTraversable="false" maxWidth="-Infinity" prefHeight="25.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1" /><Label alignment="CENTER" prefHeight="17.0" prefWidth="135.0" text="Nummer :" GridPane.columnIndex="1" GridPane.rowIndex="1" /><Label text="Neuen EDI Eintrag anlegen" GridPane.columnIndex="2">
+		<children><TextField fx:id="tfEdiNr" focusTraversable="false" maxWidth="-Infinity" prefHeight="25.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1" /><Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="17.0" prefWidth="135.0" text="Nummer :" GridPane.columnIndex="1" GridPane.rowIndex="1" /><Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Neuen EDI Eintrag anlegen" GridPane.columnIndex="1" GridPane.columnSpan="2">
 		<font>
 		<Font size="18.0" />
 		</font></Label>
