--- a/EdiListFX/src/de/vbl/ediliste/view/TestAnchorPane.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/TestAnchorPane.fxml
@@ -4,8 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="632.0" prefWidth="773.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="testAnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 <children><ScrollPane prefHeight="632.0" prefWidth="773.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 <content>
 <AnchorPane prefHeight="617.0" prefWidth="767.0">
