--- a/EdiListFX/src/de/vbl/ediliste/view/EdiMain.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiMain.fxml
@@ -4,9 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="795.0" prefWidth="1409.0"
-	xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="de.vbl.ediliste.controller.EdiMainController">
+<BorderPane prefHeight="795.0" prefWidth="1409.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiMainController">
 	<top>
 		<VBox>
 			<children>
@@ -14,8 +12,7 @@
 					<menus>
 						<Menu mnemonicParsing="false" text="Datei">
 							<items>
-								<MenuItem mnemonicParsing="false" onAction="#btnExportExcel"
-									text="Export nach Excel" />
+								<MenuItem mnemonicParsing="false" onAction="#btnExportExcel" text="Export nach Excel" />
 								<MenuItem mnemonicParsing="false" text="Beenden" />
 							</items>
 						</Menu>
@@ -26,61 +23,44 @@
 						</Menu>
 						<Menu mnemonicParsing="false" text="Hilfe">
 							<items>
-								<MenuItem mnemonicParsing="false" onAction="#btnUeber"
-									text="Über" />
+								<MenuItem mnemonicParsing="false" onAction="#btnUeber" text="Über" />
 							</items>
 						</Menu>
 					</menus>
 				</MenuBar>
-				<TextField fx:id="txtInfoZeile" alignment="CENTER"
-					editable="false" />
+				<TextField fx:id="txtInfoZeile" alignment="CENTER" disable="true" editable="false" />
 			</children>
 		</VBox>
 	</top>
 	<center>
-		<TabPane fx:id="tabPaneObjekte" tabClosingPolicy="UNAVAILABLE"
-			BorderPane.alignment="CENTER">
+		<TabPane fx:id="tabPaneObjekte" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
 			<tabs>
 				<Tab fx:id="tabEdiNr" text="EDI-Nr.">
 					<content>
 						<AnchorPane>
 							<children>
-								<SplitPane dividerPositions="0.2857142857142857"
-									prefHeight="739.0" prefWidth="1407.0" AnchorPane.bottomAnchor="0.0"
-									AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-									AnchorPane.topAnchor="0.0">
+								<SplitPane dividerPositions="0.2857142857142857" prefHeight="739.0" prefWidth="1407.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<items>
-										<VBox prefHeight="739.0" prefWidth="1407.0"
-											AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-											AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+										<VBox prefHeight="739.0" prefWidth="1407.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 											<children>
 												<ToolBar layoutX="-48.0" layoutY="14.0" prefWidth="200.0">
 													<items>
-														<Button fx:id="btnNewEdiNr" mnemonicParsing="false"
-															onAction="#newEdiNr" text="Neu" />
-														<Button fx:id="btnDeleteEdiEintrag" disable="true"
-															mnemonicParsing="false" onAction="#deleteEdiEintrag"
-															text="Löschen" />
+														<Button fx:id="btnNewEdiNr" mnemonicParsing="false" onAction="#newEdiNr" text="Neu" />
+														<Button fx:id="btnDeleteEdiEintrag" disable="true" mnemonicParsing="false" onAction="#deleteEdiEintrag" text="Löschen" />
 													</items>
 												</ToolBar>
-												<TableView fx:id="tableEdiNrAuswahl" disable="true"
-													prefHeight="702.0" prefWidth="535.0"
-													tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+												<TableView fx:id="tableEdiNrAuswahl" prefHeight="702.0" prefWidth="535.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
 													<columns>
-														<TableColumn fx:id="tColAuswahlEdiNr"
-															editable="false" maxWidth="120.0" minWidth="0.0"
-															prefWidth="35.0" text="Nr." />
-														<TableColumn fx:id="tColAuswahlEdiNrBezeichnung"
-															editable="false" maxWidth="1.7976931348623157E308"
-															minWidth="80.0" prefWidth="600.0" text="Bezeichnung" />
+														<TableColumn fx:id="tColAuswahlEdiNr" editable="false" maxWidth="120.0" minWidth="0.0" prefWidth="35.0" text="Nr." />
+														<TableColumn fx:id="tColAuswahlEdiNrBezeichnung" editable="false" maxWidth="1.7976931348623157E308" minWidth="80.0" prefWidth="600.0" text="Bezeichnung" />
 													</columns>
 												</TableView>
 											</children>
 										</VBox>
 <!--									 <AnchorPane fx:id="ediEintragSplitPane" />   --> 
 										 <Pane>
-											<fx:include fx:id="ediEintrag" source="EdiEintrag.fxml" />
-										</Pane> 
+										 	<fx:include fx:id="ediEintrag" disable="true" source="EdiEintrag.fxml" />
+										 </Pane>
 									</items>
 								</SplitPane>
 							</children>
@@ -89,20 +69,13 @@
 				</Tab>
 				<Tab fx:id="tabPartner" text="Partner">
 					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-							prefWidth="200.0">
+						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 							<children>
-								<TableView fx:id="tablePartnerAuswahl" editable="true"
-									maxWidth="1.7976931348623157E308" prefHeight="471.0"
-									AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-									AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+								<TableView fx:id="tablePartnerAuswahl" editable="true" maxWidth="1.7976931348623157E308" prefHeight="471.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<columns>
-										<TableColumn fx:id="tColAuswahlPartnerName"
-											prefWidth="116.0" text="Partner" />
-										<TableColumn fx:id="tColAuswahlPartnerSysteme"
-											editable="false" prefWidth="65.0" text="Systeme" />
-										<TableColumn fx:id="tColAuswahlPartnerKomponenten"
-											editable="false" prefWidth="91.0" text="Komponenten" />
+										<TableColumn fx:id="tColAuswahlPartnerName" prefWidth="116.0" text="Partner" />
+										<TableColumn fx:id="tColAuswahlPartnerSysteme" editable="false" prefWidth="65.0" text="Systeme" />
+										<TableColumn fx:id="tColAuswahlPartnerKomponenten" editable="false" prefWidth="91.0" text="Komponenten" />
 									</columns>
 								</TableView>
 							</children>
@@ -111,20 +84,13 @@
 				</Tab>
 				<Tab fx:id="tabSysteme" text="Systeme">
 					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-							prefWidth="200.0">
+						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 							<children>
-								<TableView fx:id="tableSystemAuswahl" editable="true"
-									prefHeight="471.0" prefWidth="306.0" AnchorPane.bottomAnchor="0.0"
-									AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-									AnchorPane.topAnchor="0.0">
+								<TableView fx:id="tableSystemAuswahl" editable="true" prefHeight="471.0" prefWidth="306.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<columns>
-										<TableColumn fx:id="tColSelSystemSystemName"
-											prefWidth="126.0" text="System" />
-										<TableColumn fx:id="tColSelSystemPartnerName"
-											editable="false" prefWidth="123.0" text="Partner" />
-										<TableColumn fx:id="tColSelSystemKomponenten"
-											editable="false" prefWidth="103.0" text="Komponenten" />
+										<TableColumn fx:id="tColSelSystemSystemName" prefWidth="126.0" text="System" />
+										<TableColumn fx:id="tColSelSystemPartnerName" editable="false" prefWidth="123.0" text="Partner" />
+										<TableColumn fx:id="tColSelSystemKomponenten" editable="false" prefWidth="103.0" text="Komponenten" />
 									</columns>
 								</TableView>
 							</children>
@@ -133,34 +99,24 @@
 				</Tab>
 				<Tab fx:id="tabKomponenten" text="Komponenten">
 					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-							prefWidth="200.0">
+						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 							<children>
-								<SplitPane dividerPositions="0.29797979797979796"
-									focusTraversable="true" prefHeight="739.0" prefWidth="1407.0"
-									AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-									AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+								<SplitPane dividerPositions="0.29797979797979796" focusTraversable="true" prefHeight="739.0" prefWidth="1407.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<items>
-										<AnchorPane minHeight="0.0" minWidth="0.0"
-											prefHeight="160.0" prefWidth="100.0">
+										<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
 											<children>
-												<TableView fx:id="tableKomponentenAuswahl"
-													editable="true" prefHeight="471.0" prefWidth="306.0"
-													AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-													AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+												<TableView fx:id="tableKomponentenAuswahl" editable="true" prefHeight="471.0" prefWidth="306.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 													<columns>
-														<TableColumn fx:id="tColSelKompoKomponten"
-															prefWidth="113.0" text="Komponente" />
-														<TableColumn fx:id="tColSelKompoSysteme"
-															editable="false" prefWidth="117.0" text="System" />
-														<TableColumn fx:id="tColSelKompoPartner"
-															editable="false" prefWidth="145.0" text="Partner" />
+														<TableColumn fx:id="tColSelKompoKomponten" prefWidth="113.0" text="Komponente" />
+														<TableColumn fx:id="tColSelKompoSysteme" editable="false" prefWidth="117.0" text="System" />
+														<TableColumn fx:id="tColSelKompoPartner" editable="false" prefWidth="145.0" text="Partner" />
 													</columns>
 												</TableView>
 											</children>
 										</AnchorPane>
-										<AnchorPane fx:id="komponenteSplitPane" minHeight="0.0"
-											minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+										<Pane>
+											<fx:include fx:id="ediKomponente" source="EdiKomponente.fxml"/>
+										</Pane>
 									</items>
 								</SplitPane>
 							</children>
@@ -169,32 +125,22 @@
 				</Tab>
 				<Tab disable="true" text="Anbindungen">
 					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-							prefWidth="200.0" />
+						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
 					</content>
 				</Tab>
 				<Tab disable="true" text="Szenarios">
 					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-							prefWidth="200.0" />
+						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
 					</content>
 				</Tab>
 				<Tab fx:id="tabGeschaeftsobjekt" text="Geschäftsobjekte">
 					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-							prefWidth="200.0">
+						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 							<children>
-								<TableView fx:id="tableGeschaeftsobjektAuswahl"
-									editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-									AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-									AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+								<TableView fx:id="tableGeschaeftsobjektAuswahl" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<columns>
-										<TableColumn fx:id="tColAuswahlGeschaeftsobjektName"
-											maxWidth="1.7976931348623157E308" minWidth="110.0" prefWidth="250.0"
-											text="Geschäftsobjekt" />
-										<TableColumn fx:id="tColAuswahlGeschaeftsobjektAnzahl"
-											editable="false" maxWidth="1.7976931348623157E308" minWidth="120.0"
-											prefWidth="-1.0" text="Verwendungen" />
+										<TableColumn fx:id="tColAuswahlGeschaeftsobjektName" maxWidth="1.7976931348623157E308" minWidth="110.0" prefWidth="250.0" text="Geschäftsobjekt" />
+										<TableColumn fx:id="tColAuswahlGeschaeftsobjektAnzahl" editable="false" maxWidth="1.7976931348623157E308" minWidth="120.0" prefWidth="-1.0" text="Verwendungen" />
 									</columns>
 								</TableView>
 							</children>
