--- a/EdiListFX/src/de/vbl/ediliste/view/EdiKomponente.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiKomponente.fxml
@@ -4,13 +4,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane fx:id="komponente" minHeight="400.0" minWidth="500.0"
-	xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="de.vbl.ediliste.controller.EdiKomponenteController">
+<AnchorPane fx:id="ediKomponente" xmlns="http://javafx.com/javafx/8"
+	xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.ediliste.controller.EdiKomponenteController">
 	<children>
 		<SplitPane dividerPositions="0.35" focusTraversable="true"
-			layoutX="-246.0" layoutY="-200.0" orientation="VERTICAL" prefHeight="0.0"
-			prefWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+			orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0"
+			AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
 			AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<items>
 				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0"
@@ -30,10 +29,10 @@
 										<Label layoutX="8.0" layoutY="15.0" text="Bezeichnung:" />
 										<Label layoutX="6.0" layoutY="52.0" text="Beschreibung:"
 											AnchorPane.topAnchor="40.0" />
-										<TextField fx:id="taBeschreibung" layoutX="90.0"
-											layoutY="48.0" AnchorPane.bottomAnchor="5.0"
-											AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="15.0"
-											AnchorPane.topAnchor="40.0" />
+										<TextArea fx:id="taBeschreibung" layoutX="90.0"
+											layoutY="47.0" prefHeight="54.0" prefWidth="480.0"
+											AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="80.0"
+											AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="40.0" />
 									</children>
 								</AnchorPane>
 							</content>
@@ -56,14 +55,14 @@
 											AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
 											AnchorPane.topAnchor="5.0">
 											<columns>
-												<TableColumn fx:id="tcDatumBis" prefWidth="75.0"
-													text="bis Datum" />
 												<TableColumn fx:id="tcEdiNr" prefWidth="75.0"
 													text="Edi-Nr." />
 												<TableColumn fx:id="tcSender" prefWidth="144.99996185302734"
 													text="Edi-Sender" />
 												<TableColumn fx:id="tcEmpfaenger" prefWidth="153.0"
 													text="Edi-Empfänger" />
+												<TableColumn fx:id="tcDatumBis" text="Start-Datum" />
+												<TableColumn text="Ende-Datum" />
 											</columns>
 										</TableView>
 									</children>
@@ -75,4 +74,4 @@
 			</items>
 		</SplitPane>
 	</children>
-</Pane>
+</AnchorPane>
